--- a/Regression and SVM instructions - solutions.ipynb
+++ b/Regression and SVM instructions - solutions.ipynb
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,13 +386,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[6.3200e-03 1.8000e+01 2.3100e+00 ... 1.5300e+01 3.9690e+02 4.9800e+00]\n",
+      " [2.7310e-02 0.0000e+00 7.0700e+00 ... 1.7800e+01 3.9690e+02 9.1400e+00]\n",
+      " [2.7290e-02 0.0000e+00 7.0700e+00 ... 1.7800e+01 3.9283e+02 4.0300e+00]\n",
+      " ...\n",
+      " [6.0760e-02 0.0000e+00 1.1930e+01 ... 2.1000e+01 3.9690e+02 5.6400e+00]\n",
+      " [1.0959e-01 0.0000e+00 1.1930e+01 ... 2.1000e+01 3.9345e+02 6.4800e+00]\n",
+      " [4.7410e-02 0.0000e+00 1.1930e+01 ... 2.1000e+01 3.9690e+02 7.8800e+00]]\n",
       "[30.00384338 25.02556238 30.56759672 28.60703649 27.94352423]\n",
       "Coefficients: \n",
       " [-1.08011358e-01  4.64204584e-02  2.05586264e-02  2.68673382e+00\n",
@@ -406,6 +413,7 @@
     }
    ],
    "source": [
+    "print(data.data)\n",
     "X = data.data\n",
     "y = data.target\n",
     "\n",
