--- a/Assignment 1 Answer Template.ipynb
+++ b/Assignment 1 Answer Template.ipynb
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,11 +781,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "decisionTree = DecisionTree(data_descriptive.tolist(), descriptive_features.tolist(), data_label.tolist(), \"gini\")\n",
+    "decisionTree = DecisionTree(data_descriptive.tolist(), descriptive_features.tolist(), data_label.tolist(), \"entropy\")\n",
     "decisionTree.id3(0,7000)\n",
     "\n",
     "decisionTree.print_visualTree()\n"
@@ -795,7 +795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explanation:"
+    "Explanation: Education is chosen because it has the best chance of lowering the overall entropy of the remaining data set."
    ]
   },
   {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -872,22 +872,49 @@
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "cannot copy sequence with size 17841 to array axis with dimension 119",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m~/Development/assignment1/assignment/lib/python3.6/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36m_wrapfunc\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'reshape'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-69-f32011470471>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Intercept for dataset_2: \\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintercept_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# Modified Dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf_modified\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_modified\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# First Attribute\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdataset_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Label\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Development/assignment1/assignment/lib/python3.6/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36mreshape\u001b[0;34m(a, newshape, order)\u001b[0m\n\u001b[1;32m    277\u001b[0m            [5, 6]])\n\u001b[1;32m    278\u001b[0m     \"\"\"\n\u001b[0;32m--> 279\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_wrapfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'reshape'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    280\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    281\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Development/assignment1/assignment/lib/python3.6/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36m_wrapfunc\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0;31m# a downstream library like 'pandas'.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mAttributeError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_wrapit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Development/assignment1/assignment/lib/python3.6/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36m_wrapit\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0mwrap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mwrap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Development/assignment1/assignment/lib/python3.6/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36masarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    499\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    500\u001b[0m     \"\"\"\n\u001b[0;32m--> 501\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    502\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    503\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot copy sequence with size 17841 to array axis with dimension 119"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/Development/assignment1/assignment/lib/python3.6/site-packages/ipykernel_launcher.py:30: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients for dataset_2: \n",
+      " [[ 3.07396153e-02  3.25432174e-02  3.18221664e-01 -2.88704302e-01\n",
+      "  -3.88810194e-01 -1.74988622e-02 -1.35958146e-01  6.36924362e-02\n",
+      "  -4.46364942e-01 -5.03580506e-01 -8.07542390e-01 -5.82137630e-01\n",
+      "  -4.19097264e-01 -2.59837271e-01 -8.89417301e-01 -6.73718855e-01\n",
+      "  -8.68833930e-01 -7.23302490e-01  9.29230591e-02  1.50767710e-01\n",
+      "   4.02065541e-01  9.43978041e-01 -1.80704653e-01  6.35588076e-01\n",
+      "  -8.77486309e-01  1.03509328e+00  7.57475616e-03 -8.77486309e-01\n",
+      "   7.57475616e-03  1.50767710e-01  9.29230591e-02  4.02065541e-01\n",
+      "   6.35588076e-01  1.03509328e+00  9.43978041e-01 -8.89417301e-01\n",
+      "  -6.73718855e-01 -8.68833930e-01 -7.23302490e-01 -5.82137630e-01\n",
+      "  -4.19097264e-01 -2.59837271e-01 -1.80704653e-01 -8.46210318e-01\n",
+      "   9.89068393e-01  1.40390410e+00 -7.26859017e-01 -1.27965195e+00\n",
+      "  -9.84008881e-01 -7.62787568e-01 -5.69392405e-02 -8.65227730e-02\n",
+      "   7.87169947e-02  7.46835057e-01 -1.00593097e+00 -6.52881145e-01\n",
+      "  -3.10212434e-01 -4.06309056e-01 -9.45163450e-01 -1.41060651e+00\n",
+      "   5.16150735e-01  5.93331114e-01  3.19457991e-01  5.52382360e-01\n",
+      "  -1.38853915e-01 -7.08541722e-01  9.73799101e-03 -8.33481995e-01\n",
+      "  -1.15988872e+00 -2.16222760e-01  7.01851963e-01 -8.18453478e-01\n",
+      "  -1.58098339e-01 -4.05038366e-01 -5.62361451e-01 -2.62593608e-01\n",
+      "  -1.52383631e+00 -6.82708931e-01  7.03791919e-01  1.52946333e-01\n",
+      "  -3.83112736e-01 -1.26442419e+00  2.34816081e-01 -1.10073313e+00\n",
+      "   2.47161569e-01 -5.76768997e-01  3.93605530e-01  6.99677668e-01\n",
+      "   4.57048487e-01 -2.64494726e-01 -1.19939399e-01 -3.41555606e-02\n",
+      "  -2.94530991e-01  1.01904706e-01  2.09753690e-03 -1.77327274e-01\n",
+      "   7.93122063e-01  3.22367822e-01  4.56980831e-01  1.93542840e-01\n",
+      "   2.09574784e-01 -6.11084598e-01 -3.94375142e-01 -8.17000897e-02\n",
+      "   1.86366958e-02 -7.89656847e-01 -5.62894674e-01  4.89759650e-01\n",
+      "   3.27295718e-04 -1.76677212e-01 -1.72876445e-01 -1.12913938e-01\n",
+      "  -9.10423908e-01  1.12190374e-01 -4.26701296e-01  5.93426301e-03\n",
+      "   3.31760275e-01 -6.18884670e-01  9.39883855e-01]]\n",
+      "Intercept for dataset_2: \n",
+      " [-2.20654524]\n"
      ]
     }
    ],
@@ -915,9 +942,21 @@
     "print('Coefficients for dataset_2: \\n', classifier.coef_)\n",
     "print('Intercept for dataset_2: \\n', classifier.intercept_)\n",
     "# Modified Dataset\n",
-    "X = np.reshape([df_modified.loc[:, df_modified.columns != 'label']],(-1, 1)) # First Attribute\n",
-    "y = np.reshape([dataset_2.iloc[:,-1]],(-1, 1)) # Label\n",
-    "X"
+    "#start = 0\n",
+    "# for column in df_modified:\n",
+    "#     if column != 'label':\n",
+    "#         #print(column)\n",
+    "#         #print([np.reshape([df_modified[column]],(-1, 1))])\n",
+    "#         np.concatenate((result, np.reshape([df_modified[column]],(-1, 1))), axis=1)\n",
+    "X = df_modified.drop('label', 1).as_matrix(columns=None)\n",
+    "y = np.reshape([dataset_2['label']],(-1, 1))\n",
+    "\n",
+    "classifier = LogisticRegression( solver = 'liblinear', multi_class = 'ovr')\n",
+    "classifier.fit(X, y.ravel())\n",
+    "y_pred = classifier.predict(X)\n",
+    "\n",
+    "print('Coefficients for dataset_2: \\n', classifier.coef_)\n",
+    "print('Intercept for dataset_2: \\n', classifier.intercept_)"
    ]
   },
   {
@@ -928,10 +967,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explanation:"
+    "Explanation: The third model has too many coefficents and is therfore a litte bit "
    ]
   },
   {
