--- a/Assignment 1 Answer Template.ipynb
+++ b/Assignment 1 Answer Template.ipynb
@@ -977,7 +977,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explanation: The third model has too many coefficents and is therfore a litte bit "
+    "Explanation: The first one with age tells me that at ~45 Years they get a salary over 50k and the second one tells me that at 46 h/week they get a greater salary. The difference is that the confidence gets a little higher up if the hours go up. The third is propably a little bit to much you can see that many increase the chance hard"
    ]
   },
   {
